# gbuffy

./: CHANGES  ChangeLog  GBuffy  LICENSE  Makefile.in  README  ToDo  acconfig.h  aclocal.m4  config.c  config.h.in  configure  configure.in  convert.pl  count.c  down.xpm  from.c  gbconfig.c  gbuffy.1  gbuffy.c  gbuffy.desktop  gbuffy.gnorba  gbuffy.h  gtklib.c  gtklib.h  gtkrc.example  imap.c  lib.c  mkinstalldirs  msocket.c  msocket.h  newsrc.c  nntp.c  rfc2047.c  rfc2047.h  system.c  up.xpm  utimes.c  xfaceviewer
libcompface/: Makefile  Makefile.in  arith.c  cmain.c  compface.h  uncmain.c
